--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
             background-color: #000000;
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4895923678765380"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="root">
@@ -910,3 +912,4 @@
     </script>
 </body>
 </html>
+
