--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
             alert("Não foi possível conectar ao Firebase.");
         }
     </script>
-
+    
+ <script> async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4895923678765380"
+     crossorigin="anonymous"> </script>
+    
     <style>
         body { font-family: 'Inter', sans-serif; }
         .font-mono { font-family: 'Roboto Mono', monospace; }
@@ -67,8 +70,6 @@
             background-color: #000000;
         }
     </style>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4895923678765380"
-     crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="root">
@@ -912,4 +913,5 @@
     </script>
 </body>
 </html>
+
 
