--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-4895923678765380">
     <title>Gestor de Culto Ao Vivo</title>
     
     <!-- Tailwind CSS -->
@@ -913,5 +914,6 @@
     </script>
 </body>
 </html>
+
 
 
