--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         .font-mono { font-family: 'Roboto Mono', monospace; }
         .hidden-file-input { display: none; }
         .presentation-mode {
-            background-color: #000000;
+            background-color: #111827; /* bg-gray-900 */
         }
     </style>
 </head>
