--- a/index.html
+++ b/index.html
@@ -876,7 +876,6 @@
             const panelBgColor = isReadOnly ? 'bg-black/50 backdrop-blur-sm' : 'bg-white';
             const panelTextColor = isReadOnly ? 'text-gray-200' : 'text-gray-800';
             const timelineBgColor = isReadOnly ? 'bg-black/50 backdrop-blur-sm' : 'bg-gray-200';
-            const techListSize = isReadOnly ? 'text-xl' : 'text-lg';
             
             return (
                 <>
@@ -920,11 +919,11 @@
                                      </div>
                                      <div style={{ backgroundColor: currentItem.itemColor }} className="w-8 h-8 rounded-full ml-auto flex-shrink-0 border-2 border-gray-500"></div>
                                  </div>
-                                 <ul className={`space-y-3 ${techListSize}`}>
+                                 <ul className="space-y-4">
                                      {Object.entries(techKeyTranslations).map(([key, label]) => (
-                                        <li key={key} className={`flex justify-between items-center border-b pb-2 ${isReadOnly ? 'border-white/10' : 'border-gray-200'}`}>
-                                            <span className="text-gray-400">{label}</span>
-                                            <span className={`font-semibold text-right ${isReadOnly ? 'text-white' : 'text-gray-900'}`}>{currentItem.technical?.[key] || '-'}</span>
+                                        <li key={key} className={`border-b ${isReadOnly ? 'border-white/10' : 'border-gray-200'} pb-2`}>
+                                            <div className="text-gray-400 text-sm">{label}</div>
+                                            <div className={`font-semibold ${isReadOnly ? 'text-white text-2xl' : 'text-gray-900 text-xl'}`}>{currentItem.technical?.[key] || '-'}</div>
                                         </li>
                                      ))}
                                  </ul>
@@ -1065,22 +1064,18 @@
             }
 
             return (
-                <div className="presentation-mode text-white min-h-screen flex flex-col p-8">
-                    <header className="w-full flex justify-end">
-                        <LiveClock className="text-5xl text-gray-400" />
-                    </header>
-                    <main className="flex-grow flex flex-col items-center justify-center text-center">
-                        <h2 className="text-7xl font-bold text-gray-300 mb-6">{currentItem.title}</h2>
-                        <div className={`text-[15rem] leading-none font-mono font-bold ${getTimerColor()}`}>
-                            {remainingTime >= 0 ? formatTime(remainingTime) : `-${formatTime(remainingTime)}`}
+                <div className="presentation-mode text-white min-h-screen flex flex-col p-8 justify-center items-center">
+                    <LiveClock className="text-8xl text-gray-400 mb-8" />
+                    <h2 className="text-8xl font-bold text-gray-300 mb-4">{currentItem.title}</h2>
+                    <div className={`text-[20vw] leading-none font-mono font-bold ${getTimerColor()}`}>
+                        {remainingTime >= 0 ? formatTime(remainingTime) : `-${formatTime(remainingTime)}`}
+                    </div>
+                    {nextItem && (
+                        <div className="mt-8 text-center">
+                            <p className="text-3xl text-gray-500">A SEGUIR</p>
+                            <h3 className="text-8xl font-bold text-yellow-400">{nextItem.title}</h3>
                         </div>
-                        {nextItem && (
-                            <div className="mt-8">
-                                <p className="text-3xl text-gray-500">A SEGUIR</p>
-                                <h3 className="text-6xl font-bold text-yellow-400">{nextItem.title}</h3>
-                            </div>
-                        )}
-                    </main>
+                    )}
                 </div>
             );
         };
